[package]
name = "quickraw"
version = "0.1.6"
edition = "2021"
description = "A pure rust library to handle camera raw files"
keywords = ["raw", "camera"]
documentation = "https://docs.rs/quickraw"
repository = "https://github.com/qdwang/quickraw"
license = "LGPL-2.1"
exclude = ["tests/"]

[dependencies]
fn-util = { version = "0.1" }
thiserror = "1"
anyhow = "1"
once_cell = "1"
phf = { version = "0.10", features = ["macros"] }
quickexif = "0.1"


# only for wasm target
wasm-bindgen = { version = "0.2", optional = true }
image = { version = "0.24", default-features = false, features = ["jpeg"], optional = true }

[features]
wasm = ["wasm-bindgen", "image"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
codegen-units = 1
lto = "fat"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
