[package]
name = "quickraw"
version = "0.2.1-alpha.1"
edition = "2021"
description = "A pure rust library to handle camera raw files"
keywords = ["raw", "camera"]
documentation = "https://docs.rs/quickraw"
repository = "https://github.com/qdwang/quickraw"
license = "LGPL-2.1"
exclude = ["examples/samples/"]

[dependencies]
thiserror = "1"
erreport = "0.2"
phf = { version = "0.11", features = ["macros"] }
quickexif = { version = "0.2.0-alpha.7" }
wide = "0.7"
zune-jpeg = "0.3.17"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
codegen-units = 1
lto = "fat"
debug = 1

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
